# TXTReadMethodCompare

./: CMakeLists.txt  README.md  testReadFile.cpp
